# Project

./: .gitattributes  .gitignore  Makefile  TROUBLESHOOTING_REPORT.md  backend_config_debug.md  djinn_search_plan.md  djinn_sidebar_research.md  djinn_sidebar_resizablebox_error.md  docker-compose.yml  dockerfile_dev_build_summary.md  yolo_implementation_summary.md
Notes/: djinn_sidebar_checkbox_redesign.md  djinn_sidebar_issue_analysis.md  dockerfile_optimization_summary.md  promo_page_style_guide.md  selkie_development_plan.md
architecture/: selkie_architecture.md
architecture/Phase 1/: phase_1_details.md
architecture/Phase_1/: 1_core_api_structure.md  2_database_storage_integration.md  3_authentication_service.md  4_kappa_services.md
architecture/checklist/: phase_1_checklist.md  phase_2_5_checklist.md  phase_2_kappa.md  phase_3_checklist.md  phase_3_djinn.md  phase_4_ghost.md  phase_5_tesseract.md  subsequent_phases_checklist.md
backend/: Dockerfile  Dockerfile.dev  Makefile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: djinn.py
backend/app/argos/: __init__.py
backend/app/auth/: crud.py  router.py  schemas.py  security.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/djinn/: __init__.py  crud.py  router.py  schemas.py
backend/app/ghost/: __init__.py  crud.py  router.py  schemas.py
backend/app/kappa/: __init__.py  crud.py  router.py  schemas.py
backend/app/schemas/: djinn.py
backend/app/services/djinn/inference/: detection.py
backend/app/services/djinn/utils/: image_processing.py
backend/app/tesseract/: __init__.py  crud.py  router.py  schemas.py
backend/app/users/: router.py
frontend/: Dockerfile  next.config.js  package.json  tsconfig.json
frontend/.next/: build-manifest.json  react-loadable-manifest.json  trace
frontend/.next/server/: _error.js  components_map_SharedMapComponent_tsx.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json
frontend/.next/server/pages/: _app.js  _error.js  index.js  login.js  map.js  tesseract.js
frontend/.next/server/vendor-chunks/: @swc.js  leaflet.js  next.js
frontend/.next/static/chunks/: _error.js  components_map_SharedMapComponent_tsx.js  node_modules_mediapipe_tasks-vision_vision_bundle_mjs.js  webpack.js
frontend/.next/static/development/: _buildManifest.js
frontend/.next/static/webpack/: 12356d10e5ae0c2b.webpack.hot-update.json  53e968838822bf1f.webpack.hot-update.json  595ecdb774fcf1c3.webpack.hot-update.json  823666163efce084.webpack.hot-update.json  86c8a8d7e44fe822.webpack.hot-update.json  c55fda6c8115a02e.webpack.hot-update.json  c56eca1795cbac6c.webpack.hot-update.json  c86c324853bb276d.webpack.hot-update.json  ff784682f190f2a9.webpack.hot-update.json  webpack.06e1cd5a0b5a1b14.hot-update.js  webpack.08564de84e465ffa.hot-update.js  webpack.08a6d2039053ebf0.hot-update.js  webpack.08c997810860f7f4.hot-update.js  webpack.0bdc97936b8656fe.hot-update.js  webpack.12356d10e5ae0c2b.hot-update.js  webpack.1918bb93ada6f6a9.hot-update.js  webpack.1a34ef60a0cb25b9.hot-update.js  webpack.1a6a320737ebe2d4.hot-update.js  webpack.215ed66d5a317c36.hot-update.js  webpack.2c60f199fec61bc3.hot-update.js  webpack.331866b731cb78da.hot-update.js  webpack.362e9c28b9fc9245.hot-update.js  webpack.3e0c907b1244f418.hot-update.js  webpack.418462cf2bb543a2.hot-update.js  webpack.42d6649568712b75.hot-update.js  webpack.43ad85b29f3b0d1a.hot-update.js  webpack.45b522d03ab663ce.hot-update.js  webpack.47ec90a85e54e4f7.hot-update.js  webpack.48ad19a4f6d3e05a.hot-update.js  webpack.4f4b6fef43b497c9.hot-update.js  webpack.4fc69fc26772a8f4.hot-update.js  webpack.53e968838822bf1f.hot-update.js  webpack.54065e96f156f94a.hot-update.js  webpack.546d543a2f1ee311.hot-update.js  (+35 more)
frontend/components/auth/: GoogleLoginButton.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/components/common/: ScrollableContent.tsx  SidebarItem.tsx
frontend/components/icons/: GoogleGIcon.tsx
frontend/components/kappa/: DocumentSearch.tsx  DocumentUploadForm.tsx
frontend/components/layout/: Layout.tsx  Sidebar.module.css  Sidebar.tsx
frontend/components/map/: ContextWindowPlaceholder.module.css  ContextWindowPlaceholder.tsx  FilterButtons.tsx  FilterTabs.module.css  FilterTabs.tsx  LayersMenu.module.css  LayersMenu.tsx  MapContextMenu.module.css  MapContextMenu.tsx  SearchBar.module.css  SearchBar.tsx  SharedMapComponent.tsx
frontend/components/promo/: PromoHeader.module.css  PromoHeader.tsx
frontend/components/tesseract/: TesseractSceneUploadForm.tsx  TesseractViewer.tsx
frontend/context/: AuthContext.tsx
frontend/pages/: _app.tsx  _document.tsx  argos.module.css  argos.tsx  djinn.module.css  djinn.tsx  ghost.module.css  ghost.tsx  index.tsx  kappa.tsx  login.tsx  map.tsx  profile.tsx  tesseract.tsx
frontend/pages/about/: argos.module.css  argos.tsx  djinn.module.css  djinn.tsx  ghost.module.css  ghost.tsx  projects.module.css  projects.tsx
frontend/styles/: Home.module.css  Layout.module.css  Login.module.css  MapPage.module.css  Notifications.module.css  Profile.module.css  ScrollableContent.module.css  SidebarItem.module.css  globals.css
frontend/types/: leaflet-image.d.ts
(+44 files in other folders)
