[tool.poetry]
name = "selkie-backend"
version = "0.1.0"
description = "Backend services for the Selkie project"
authors = ["Selkie Dev Tamdev@selkie.local&gt;"]
readme = "README.md" # Optional: Add a README later
packages = [{include = "app"}] # Assuming main code will be in an 'app' directory

[tool.poetry.dependencies]
python = "^3.13" # Using the latest specified Python version
fastapi = "^0.111.0" # Core web framework
uvicorn = {extras = ["standard"], version = "^0.29.0"} # ASGI server for FastAPI
pydantic = {extras = ["email"], version = "^2.7.1"} # Data validation
neo4j = "^5.19.0" # Neo4j database driver
minio = "^7.2.6" # MinIO object storage client
python-jose = {extras = ["cryptography"], version = "^3.3.0"} # JWT handling
passlib = {extras = ["bcrypt"], version = "^1.7.4"} # Password hashing
python-dotenv = "^1.0.1" # For loading environment variables from .env file
# Add other core dependencies as needed
pydantic-settings = "^2.2.1" # For loading settings from env vars

pillow = "^10.3.0" # Image handling
opencv-python-headless = "^4.9.0" # OpenCV (headless version for servers)
scipy = "^1.13.0" # Scientific and technical computing
numpy = "^1.26.4" # Fundamental package for numerical computation
# TODO: Add Tesseract dependencies (e.g., Gaussian Splatting libraries, 3D processing) when needed
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0" # Testing framework
httpx = "^0.27.0" # Async HTTP client for testing FastAPI
mypy = "^1.10.0" # Static type checker
ruff = "^0.4.4" # Linter/formatter

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"